--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {},
   "repository": {
     "type": "git",
-    "url": "http"
+    "url": "https://github.com/Terencesun/nayo-admin-core"
   },
   "keywords": [
     "nayo",
